part1/k8-todo-app/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-todo
  name: k8todobackend-svc
spec:
  type: ClusterIP
  selector:
    app: k8todo-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
